fix: increase height of main section for improved layout visibility

--- a/src/styles/mainSection.css
+++ b/src/styles/mainSection.css
@@ -17,7 +17,7 @@
   margin: 0;
 
   width: 100vw;
-  height: 80vh;
+  height: 90vh;
   /* min-height: 80dvh; */
   text-align: center;
 }
